--- a/src/api/c/Cmake/CMakeLists.txt
+++ b/src/api/c/Cmake/CMakeLists.txt
@@ -12,22 +12,12 @@ set(DIR_SRC_API_F ../../fortran)
 set(DIR_SRC_API_C ..)
 set(DIR_SRC_C_APP ../../../api_examples)
 
+include(${DIR_SRC_API_F}/Cmake/core_files.cmake)
+
+# Core files plus kind values from the C directory
 set(SRC_API_F
-    ${DIR_SRC_API_F}/open_swd_file.f90
-    ${DIR_SRC_API_F}/spectral_interpolation.f90
-    ${DIR_SRC_API_F}/spectral_wave_data.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_allocate.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_c.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_error.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_1_impl_1.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_2_impl_1.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_3_impl_1.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_4_impl_1.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_4_impl_2.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_5_impl_1.f90
-    ${DIR_SRC_API_F}/spectral_wave_data_shape_6_impl_1.f90
-    ${DIR_SRC_API_F}/swd_version.f90
-    ${DIR_SRC_API_C}/kind_values.f90     # Note we apply from the C-directory
+    ${SRC_CORE}
+    ${DIR_SRC_API_C}/kind_values.f90 
 )
 
 set(SRC_C_APP
